// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding Slide component should render a loading indicator 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="#F4F7F8"
            hidesWhenStopped={true}
            size="small"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render both slide navigation buttons 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Next
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#F4F7F8"
            height={20}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={20}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            tintColor="#F4F7F8"
            vbHeight={256}
            vbWidth={256}
            width={20}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGLine
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                x1={40}
                x2={216}
                y={0}
                y1={128}
                y2={128}
              />
              <RNSVGPath
                d="M144 56 216 128 144 200"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <Text
        onPress={[MockFunction]}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.3)",
            "marginLeft": -16,
            "paddingHorizontal": 16,
            "paddingVertical": 15,
          }
        }
      >
        Skip
      </Text>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render children 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
</View>
`;

exports[`The Onboarding Slide component should render onboarding next button navigation 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Next
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#F4F7F8"
            height={20}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={20}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            tintColor="#F4F7F8"
            vbHeight={256}
            vbWidth={256}
            width={20}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGLine
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                x1={40}
                x2={216}
                y={0}
                y1={128}
                y2={128}
              />
              <RNSVGPath
                d="M144 56 216 128 144 200"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render onboarding skip button navigation 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.3)",
            "marginLeft": -16,
            "paddingHorizontal": 16,
            "paddingVertical": 15,
          }
        }
      >
        Skip
      </Text>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render onboarding skip button with custom text 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <Text
        onPress={[MockFunction]}
        style={
          Object {
            "color": "rgba(39, 39, 46, 0.3)",
            "marginLeft": -16,
            "paddingHorizontal": 16,
            "paddingVertical": 15,
          }
        }
      >
        Custom skip button text
      </Text>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render primary navigation button with a custom icon 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Custom nav text with custom icon
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#F4F7F8"
            height={20}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={20}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            tintColor="#F4F7F8"
            vbHeight={256}
            vbWidth={256}
            width={20}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M176,200a24,24,0,0,1-48,0V136"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M32.33457,136a8.021,8.021,0,0,1-7.97506-8.70945,104.00633,104.00633,0,0,1,207.281,0A8.021,8.021,0,0,1,223.66543,136Z"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
              <RNSVGPath
                d="M88,136c0-72,40-104,40-104s40,32,40,104"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render primary navigation button with custom text 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Custom nav text
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={20}
            bbWidth={20}
            color="#F4F7F8"
            height={20}
            id="Raw"
            meetOrSlice={0}
            minX={0}
            minY={0}
            size={20}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                null,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            tintColor="#F4F7F8"
            vbHeight={256}
            vbWidth={256}
            width={20}
          >
            <RNSVGGroup
              fill={
                Array [
                  0,
                  4278190080,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={Object {}}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={Array []}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            >
              <RNSVGRect
                fill={null}
                fillOpacity={1}
                fillRule={1}
                height={256}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                  ]
                }
                rotation={0}
                rx={0}
                ry={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={null}
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={0}
                strokeLinejoin={0}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={1}
                vectorEffect={0}
                width={256}
                x={0}
                y={0}
              />
              <RNSVGLine
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                x1={40}
                x2={216}
                y={0}
                y1={128}
                y2={128}
              />
              <RNSVGPath
                d="M144 56 216 128 144 200"
                fill={null}
                fillOpacity={1}
                fillRule={1}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    0,
                  ]
                }
                opacity={1}
                originX={0}
                originY={0}
                propList={
                  Array [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                rotation={0}
                scaleX={1}
                scaleY={1}
                skewX={0}
                skewY={0}
                stroke={
                  Array [
                    0,
                    4294244344,
                  ]
                }
                strokeDasharray={null}
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeMiterlimit={4}
                strokeOpacity={1}
                strokeWidth={16}
                vectorEffect={0}
                x={0}
                y={0}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The Onboarding Slide component should render primary navigation button without a custom icon 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      Object {
        "minHeight": "100%",
      }
    }
    overScrollMode="auto"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Boom
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "flexDirection": "row-reverse",
        "justifyContent": "space-between",
        "left": 0,
        "marginVertical": 8,
        "paddingHorizontal": 16,
        "paddingVertical": 0,
        "position": "absolute",
        "right": 0,
      }
    }
    vertical={false}
  >
    <View
      edges={
        Array [
          "bottom",
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 16,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 21,
              }
            }
          >
            Custom nav text without an icon
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
